# Vikt

./: .gitignore  Cargo.toml  LICENSE  README.md  demo_log.csv  rustfmt.toml
src/: cli_args.rs  main.rs  weight.rs  weightlog.rs
