[package]
name = "vikt"
version = "0.1.0"
authors = ["Imbus <imbus64@protonmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
chrono = "*" # Well, its chrono
prettytable-rs = "*" # Does pretty table output, shocker
clap = "*" # Command line argument parser
dirs = "*" # Provides easy access to cross-platform dirs like home, config, temp e.t.c
colored = "*" # Simple terminal colored output
